--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ﻿<!DOCTYPE html>
 <html lang="ja">
 
+<link rel="preconnect" href="https://fonts.lug.ustc.edu.cn">
+<link href="https://fonts.lug.ustc.edu.cn/css2?family=Noto+Sans+JP:wght@900&family=Noto+Sans+SC:wght@900&family=Noto+Serif+JP:wght@900&family=Noto+Serif+SC:wght@900&display=swap" rel="stylesheet"> 
+	
 <head>
 	<meta charset="utf-8">
 	<title>5000兆円ジェネレーター super</title>
